--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "genres",
-  "version": "1.0.0",
+  "name": "redis-express-example",
+  "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,9 @@
     "morgan": "1.9.1",
     "redis": "2.8.0",
     "sequelize": "5.18.0",
-    "sqlite3": "4.1.0"
+    "sqlite3": "4.1.0",
+    "swagger-jsdoc": "3.4.0",
+    "swagger-ui-express": "4.0.7"
   },
   "devDependencies": {
     "nodemon": "1.19.1"
